--- a/w0d2/index.html
+++ b/w0d2/index.html
@@ -8,5 +8,12 @@
 </head>
 <body>
     <p>test</p>
-</body>
+    <H2>LEVEL2</H2>
+    <div>
+    <button><H1>ЖМИ</H1></button></div>
+    <a href="#">ссылка</a>
+    <div class="inline-el"><h1>Строчный</h1></div>
+    <div class="block-el">Блочный</div
+<h1>&#8595</h1>
+    </body>
 </html>
