add new files 250119

--- a/w0d1/index.html
+++ b/w0d1/index.html
@@ -11,9 +11,40 @@
 <body>
     <p>моё первое задание</p>
     <p>Hello World</p>
-    <img src="./pacMen.png" alt="Пэк-Мэн"
-        width="100px"> 
-        
+    <img src="./pacMen.png" alt="Пэк-Мэн" width="100px">
+    <b>Жирный</b> <u>Подчеркнутый</u> <i>Типа курсив</i>
+    
+    <a href="https://www.ukr.net/" target="_blank"
+    title="Украина новости "</a>
+    <hr>
+    <img src="https://upst.fwdcdn.com/temp/holidays/6828/logo_ua.gif" alt="ukr pic gif?"> <title>укр картинка</title>
+
+    <h1>Заголовок всей страницы</h1>
+
+<article>
+  <h2>Заголовок статьи</h2>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde voluptas necessitatibus, doloremque vero pariatur aut delectus neque sint maxime! Dolore sed voluptatibus repellendus assumenda nostrum accusamus omnis, nesciunt libero iusto.</p>
+
+  <section>
+    <h3>Заголовок секции статьи</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum dolor facere, labore explicabo recusandae magnam sit atque aspernatur quaerat veritatis sunt veniam error velit odio excepturi pariatur eaque nesciunt vero, minus animi. Explicabo molestiae
+      modi magni labore iusto reprehenderit et repellat odit quas nisi, atque aut quidem praesentium nostrum mollitia?</p>
+
+    <section>
+      <h4>Заголовок подсекции</h4>
+      <ul>
+        <li>Lorem ipsum dolor sit amet.</li>
+        <li>Lorem ipsum dolor sit amet.</li>
+        <li>Lorem ipsum dolor sit amet.</li>
+        <li>Lorem ipsum dolor sit amet.</li>
+      </ul>
+    </section>
+
+  </section>
+
+</article>
+
+
 </body>
 
 </html>
