--- a/w0d2/index.html
+++ b/w0d2/index.html
@@ -6,14 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
+<Article>
+<h1>Hello my friend</h1>
+</Article>
 <body>
-    <p>test</p>
-    <H2>LEVEL2</H2>
-    <div>
-    <button><H1>ЖМИ</H1></button></div>
-    <a href="#">ссылка</a>
-    <div class="inline-el"><h1>Строчный</h1></div>
-    <div class="block-el">Блочный</div
-<h1>&#8595</h1>
+    
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRw09wHblIZrcnp1wveMi57JCmtxKbAOdcApO1E5RYqbgRidXFq7g" alt="Стив">
+      <nav>
+      <ul>
+        <li><a href="#">about</a></li>
+        <li><a href="#">my work</a></li>
+        <li><a href="#">what i like</a></li>
+      </ul>
+    </nav>
+      <button>Кнопка</button>
     </body>
 </html>
