--- a/w0d3/d03.html
+++ b/w0d3/d03.html
@@ -15,5 +15,11 @@
       <div class="sidebar">sidebar</div>
     </div>
     <div class="footer">footer</div>
+    <div class="block">block</div>
+    <div class="box">
+      </div>
+      <div class="block-left">LEFT</div>
+      <div class="block-center">CENTER</div>
+      <div class="block-rigth">rigth</div>
   </body>
 </html>
