--- a/w1d2/indexvertikale.html
+++ b/w1d2/indexvertikale.html
@@ -5,8 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="css/stylevertikale.css">
+    <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
 </head>
 <body>
-    
+ <div class="outbox top">
+     <div>a</div>
+     <div>a</div>
+     <div>a</div>
+ </div>   
+ 
+ <div class="outbox middle">
+    <div>a</div>
+    <div>a</div>
+    <div>a</div>
+</div>   
+
+<div class="outbox bottom">
+    <div>a</div>
+    <div>a</div>
+    <div>a</div>
+</div>   
+
+<p class="text">Lorem ipsum dolor sit amet consectetur 
+    adipisicing elit. Unde quaerat fugit nesciunt 
+    praesentium beatae cum vitae aspernatur, quas 
+    hic quibusdam? <span class="super">elit. Voluptate 
+        libero culpa</span>saepe impedit in aperiam 
+        sapiente eos beatae, vero qui.</p>
+
+<p class="text">Lorem ipsum dolor sit, amet consectetur 
+    adipisicing elit. Reprehenderit, quod! Aspernatur 
+    tempore, accusamus commodi quisquam eligendi deleniti 
+    numquam ex inventore. <span class="sub">elit. 
+        Voluptate libero culpa</span>saepe impedit 
+        in aperiam sapiente eos beatae, vero qui.</p>
 </body>
 </html>
