--- a/homework/modul3/indexHW3w.html
+++ b/homework/modul3/indexHW3w.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>HomeWork3</title>
-    <link rel="stylesheet" href="/css/stylesHW3w.css">
+    <link rel="stylesheet" href="./css/stylesHW3w.css">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet" <link href="https://fonts.googleapis.com/css?family=Ubuntu:300"
         rel="stylesheet">
     
