added new files

--- a/w7d2/indexw7d2.html
+++ b/w7d2/indexw7d2.html
@@ -50,9 +50,12 @@
     </ul> -->
 
  <!-- <ul class="gallery"></ul>
+-->
+
+    <script src="./js/scriptw7d2.js"></script> 
 
 
-    <script src="./js/scriptw7d2.js"></script>
+
 </body>
 
-</html> -->
+</html>
