--- a/w9d5/index.html
+++ b/w9d5/index.html
@@ -10,16 +10,20 @@
 </head>
 
 <body>
-    <input value="Dmitry" title='Enter your name' class="first-name-input default-input" id="first-name" />
-    <input value="Kuzeberlin" class="last-name-input default-input" id="last-name" />
-    <input value="Minsk-city" class="adress-input default-input"  id="adress" />
+    <input value="Dmitry" id="first-name" />
+    <input value="Kuzeberlin"  id="last-name" />
+    <input value="Minsk-city"   id="adress" />
 
     <select id="cities">
         <option>Kiev</option>
         <option>Minsk</option>
         <option selected='selected'>Moscow</option>
 
+       
+
     </select>
+
+  
 
     <textarea id="hobbies"> JS , CSS, HTML</textarea>
 
@@ -29,7 +33,9 @@
             alt="аватар" />
 
     </div>
-
+  <div>
+        <button id ='send buttion'>Send</button>
+    </div>
 
 <script src="index.js"></script>
 
