--- a/w9d5/index.html
+++ b/w9d5/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <input value="Dmitry" id="first-name" />
+    <!-- <input value="Dmitry" id="first-name" />
     <input value="Kuzeberlin"  id="last-name" />
     <input value="Minsk-city"   id="adress" />
 
@@ -35,6 +35,33 @@
     </div>
   <div>
         <button id ='send buttion'>Send</button>
+    </div> -->
+
+
+    <div class="jskmb-calculator">
+<div class="operations-block">
+<button>+</button>
+<button>-</button>
+<button>*</button>
+<button>/</button>
+</div>
+<div class='separator'>
+<hr/>
+</div>
+<div class="inputs-block">
+
+    <div>
+<label>Number 1</label>    
+<input type="number" />
+</div>
+
+<div>
+        <label>Number 2</label>    
+        <input type="number" />
+        </div>
+        
+<div>
+
     </div>
 
 <script src="index.js"></script>
