--- a/w9d5/index.html
+++ b/w9d5/index.html
@@ -48,23 +48,23 @@
         <div class='separator'>
             <hr />
         </div>
-        <div class="inputs-block">
 
+        <div class="inputs-block">
             <div class='input-block'>
                 <label>Number 1</label>
-                <input type="number" id = 'number1' />
+                <input type="number" id='number1' />
             </div>
 
             <div class='input-block'>
                 <label>Number 2</label>
-                <input type="number"  id = 'number2' />
+                <input type="number" id='number2' />
             </div>
+        </div>
+    </div>
 
-            
 
-            
 
-            <script src="index.js"></script>
+        <script src="index.js"></script>
 
 </body>
 
