--- a/w9d5/index.html
+++ b/w9d5/index.html
@@ -40,10 +40,10 @@
 
     <div class="jskmb-calculator">
         <div class="operations-block">
-            <button id='buttonPlus'>+</button>
-            <button id='buttonMinus'>-</button>
-            <button id='buttonMultiply'>*</button>
-            <button id='buttonDevide'>/</button>
+            <button class='operation-button' id='buttonPlus'>+</button>
+            <button class='operation-button' id='buttonMinus'>-</button>
+            <button class='operation-button' id='buttonMultiply'>*</button>
+            <button class='operation-button' id='buttonDevide'>/</button>
         </div>
         <div class='separator'>
             <hr />
