added task video  20 45in46sec

--- a/w9d6/index.1.html
+++ b/w9d6/index.1.html
@@ -11,49 +11,34 @@
 
 <body>
     <h1>News</h1>
-    <div class='section-news section-hot'>
-        <h2 >Hot News</h2>
+    <div class='section-hot'>
+        <h2 class='hot-header'>Hot News</h2>
         <ul>
-            <li >
+            <li class="hot-item">
                 <a href="">Tesla sale cars 3 old</a>
             </li>
-            <li >
+            <li class="hot-item">
                 <a href="">How Hero CP hokkey 2018?</a>
             </li>
-            <li >
+            <li class="hot-item">
                 <a href="">Why we love JS ?</a>
             </li>
         </ul>
-        <div class="footer">4 articles</div>
+        <div class="hot-footer">4 articles</div>
     </div>
-    <div class='section-news section-realty'>
-        <h2>real-estate</h2>
+    <div class='section-realty'>
+        <h2 class='realty-header'>real-estate</h2>
         <ul>
-            <li class=>
+            <li class="realty-item">
                 <a href="">Buy apartment now, realy?!</a>
             </li>
-            <li class=>
+            <li class="realty-item">
                 <a href="">one square meter 500USD</a>
             </li>
         </ul>
-        <div class="footer">2 articles</div>
+        <div class="hot-footer">2 articles</div>
     </div>
 
-    <div class="downfooter">
-        <ul>
-            <li>Main</li>
-            <li>News</li>
-            <li>Contacts</li>
-        </ul>
-
-        <div class="widget-weather">
-            <ul>
-                <li>Morning</li>
-                <li>Day</li>
-                <li>Night</li>
-            </ul>
-        </div>
-    </div>
 
 </body>
 
