task 21 49min 36sec

--- a/w9d6/index.html
+++ b/w9d6/index.html
@@ -10,35 +10,36 @@
 </head>
 
 <body>
-    <h1>News</h1>
-    <div class='section-news section-hot'>
-        <h2 >Hot News</h2>
-        <ul>
-            <li >
-                <a href="">Tesla sale cars 3 old</a>
-            </li>
-            <li >
-                <a href="">How Hero CP hokkey 2018?</a>
-            </li>
-            <li >
-                <a href="">Why we love JS ?</a>
-            </li>
-        </ul>
-        <div class="footer">4 articles</div>
+    <div class="news-content">
+        <h1>News</h1>
+        <div class='section-news section-hot'>
+            <h2>Hot News</h2>
+            <ul>
+                <li>
+                    <a href="">Tesla sale cars 3 old</a>
+                </li>
+                <li>
+                    <a href="">How Hero CP hokkey 2018?</a>
+                </li>
+                <li>
+                    <a href="">Why we love JS ?</a>
+                </li>
+            </ul>
+            <div class="footer">4 articles</div>
+        </div>
+        <div class='section-news section-realty'>
+            <h2>real-estate</h2>
+            <ul>
+                <li>
+                    <a href="">Buy apartment now, realy?!</a>
+                </li>
+                <li class=>
+                    <a href="">one square meter 500USD</a>
+                </li>
+            </ul>
+            <div class="footer">2 articles</div>
+        </div>
     </div>
-    <div class='section-news section-realty'>
-        <h2>real-estate</h2>
-        <ul>
-            <li class=>
-                <a href="">Buy apartment now, realy?!</a>
-            </li>
-            <li class=>
-                <a href="">one square meter 500USD</a>
-            </li>
-        </ul>
-        <div class="footer">2 articles</div>
-    </div>
-
     <div class="downfooter">
         <ul>
             <li>Main</li>
